--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,2 +1,9 @@
 <h1>Main#home</h1>
 <p>Find me in app/views/main/home.html.erb</p>
+<h3> Category </h3>
+<% @categoryies.each do |category|%>
+<%= category.id %>
+<%= category.name %>
+<br>
+<% end %>
+
